[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/Arcadepix Plus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/buttons/replay.png" type="Texture" id=2]
[ext_resource path="res://scripts/hud/menu.gd" type="Script" id=3]
[ext_resource path="res://scripts/core/GPGS.gd" type="Script" id=4]
[ext_resource path="res://assets/images/icons/rewarded_ad_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/images/buttons/empty_big.png" type="Texture" id=7]
[ext_resource path="res://assets/images/misc/coin_icon.png" type="Texture" id=8]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.109804, 0.109804, 0.109804, 0.435294 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 100
extra_spacing_top = -5
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 90
extra_spacing_top = -5
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Darkening" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = -0.00122314
anchor_right = 1.0
anchor_bottom = 0.998777
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 12.0
margin_top = 372.0
margin_right = 388.0
margin_bottom = 628.0
grow_horizontal = 2
mouse_filter = 2
custom_constants/separation = 20
alignment = 1

[node name="Text" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 376.0
margin_bottom = 53.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "CONTINUE      "
align = 1
valign = 1
uppercase = true

[node name="TapToContinue" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 73.0
margin_right = 376.0
margin_bottom = 103.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "TAP_TO_RESTART"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Center" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 376.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 91.1376, 92.3105 )
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Center"]
margin_left = 38.0
margin_right = 338.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( 128.122, 84.1368 )
custom_constants/separation = 15

[node name="ReplayButton" type="TextureButton" parent="CenterContainer/VBoxContainer/Center/VBoxContainer"]
visible = false
margin_right = 300.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 90.845, 43.1705 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )
stretch_mode = 1

[node name="ContinueButton" type="TextureButton" parent="CenterContainer/VBoxContainer/Center/VBoxContainer"]
margin_right = 300.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 147.544, 41.4254 )
texture_normal = ExtResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/ContinueButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/ContinueButton/CenterContainer"]
margin_left = 17.0
margin_top = 6.0
margin_right = 283.0
margin_bottom = 77.0
mouse_filter = 2

[node name="Price" type="Label" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/ContinueButton/CenterContainer/HBoxContainer"]
margin_right = 212.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.160784, 0.592157, 0.270588, 1 )
text = "9999"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/ContinueButton/CenterContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 266.0
margin_bottom = 71.0
mouse_filter = 2
texture = ExtResource( 8 )
stretch_mode = 4

[node name="AdButton" type="TextureButton" parent="CenterContainer/VBoxContainer/Center/VBoxContainer"]
margin_top = 99.0
margin_right = 300.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( 148.791, 41.9232 )
texture_normal = ExtResource( 7 )
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/AdButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/AdButton/CenterContainer"]
margin_left = 111.0
margin_top = 17.0
margin_right = 189.0
margin_bottom = 67.0
mouse_filter = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/AdButton/CenterContainer/HBoxContainer"]
visible = false
margin_right = 191.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0.654902, 0.282353, 1 )
text = "FREE"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/Center/VBoxContainer/AdButton/CenterContainer/HBoxContainer"]
margin_right = 78.0
margin_bottom = 50.0
mouse_filter = 2
texture = ExtResource( 5 )
stretch_mode = 4

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="GPGS" type="Node" parent="."]
script = ExtResource( 4 )
[connection signal="continue_button" from="." to="." method="_on_Menu_continue_button"]
[connection signal="gui_input" from="Darkening" to="." method="_on_TextureRect_gui_input"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Center/VBoxContainer/ReplayButton" to="." method="_on_ReplayButton_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/Center/VBoxContainer/ReplayButton" to="." method="_on_ReplayButton_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Center/VBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Center/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/Center/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Center/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Center/VBoxContainer/AdButton" to="." method="_on_AdButton_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/Center/VBoxContainer/AdButton" to="." method="_on_AdButton_button_up"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Center/VBoxContainer/AdButton" to="." method="_on_AdButton_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
